# haskell-webkit-stub

./: .gitignore  LICENSE  Setup.hs  haskell-browser.cabal  web-browser-in-haskell.cabal
WebBrowser/: Browser.hs  Main.hs
src/: Main.hs
